--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -4,6 +4,9 @@
 
 $light-interval: $palette-light-interval;
 $dark-interval: $palette-dark-interval;
+$contrast-min-ratio: $color-contrast-min-ratio;
+$contrast-base-light: $color-contrast-base-light;
+$contrast-base-dark: $color-contrast-base-dark;
 
 // stylelint-disable declaration-no-important
 
