--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -29,6 +29,7 @@ $enable-palette:                true !default;      // true
 $enable-sizing:                 true !default;      // true
 $enable-bp-smallest:            false !default;     // false
 $enable-rfs-main:               false !default;       // true :TODO:
+$enable-color-warnings:         false !default;     // false
 
 // Palette
 // =====
@@ -86,7 +87,7 @@ $level-delta-hover-color:           100 !default;
 // $green:     #138835 !default;
 // $blue:      #0055e9 !default;
 // $cyan:      #10819f !default;
-// $yellow:    #f9c215 !default;
+// $yellow:    #f9c215 !default;  // :TODO: -- use minor adjustments
 $uibase:    #5e7182 !default;
 $white:     #fff !default;
 $gray:      #666 !default;
@@ -152,9 +153,10 @@ $color-contrast-base-light: $white !default;
 $color-contrast-base-dark:  $uibase-900 !default;
 
 // Override values in `color-util` functions
-color-util.$contrast-min-ratio:  $color-contrast-min-ratio;
+color-util.$color-warnings: $enable-color-warnings;
+color-util.$contrast-min-ratio: $color-contrast-min-ratio;
 color-util.$contrast-base-light: $color-contrast-base-light;
-color-util.$contrast-base-dark:  $color-contrast-base-dark;
+color-util.$contrast-base-dark: $color-contrast-base-dark;
 
 // Component Color Variants and Levels
 // =====
