Fix passing var for color-warnings

--- a/scss/mixins/_text-emphasis.scss
+++ b/scss/mixins/_text-emphasis.scss
@@ -3,6 +3,7 @@
 
 color-util.$light-interval: settings.$palette-light-interval;
 color-util.$dark-interval: settings.$palette-dark-interval;
+color-util.$color-warnings: settings.$enable-color-warnings;
 color-util.$contrast-min-ratio:  settings.$color-contrast-min-ratio;
 color-util.$contrast-base-light: settings.$color-contrast-base-light;
 color-util.$contrast-base-dark:  settings.$color-contrast-base-dark;
