--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -4,6 +4,7 @@
 
 $light-interval: $palette-light-interval;
 $dark-interval: $palette-dark-interval;
+$color-warnings: $enable-color-warnings;
 $contrast-min-ratio: $color-contrast-min-ratio;
 $contrast-base-light: $color-contrast-base-light;
 $contrast-base-dark: $color-contrast-base-dark;
