--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -1,12 +1,14 @@
 @use "sass:map";
 @use "sass:string";
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../functions" as *;
-@use "border" as *;
-@use "box-shadow" as *;
-@use "transition" as *;
-@use "../vendor/rfs" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../functions/calc-util";
+@use "../functions/color-util";
+@use "../functions/str-util";
+@use "border";
+@use "box-shadow";
+@use "transition";
+@use "../vendor/rfs";
 
 // Calculate input height
 // Make inputs the height of their button counterpart (line-height + padding + border)
@@ -15,12 +17,12 @@
     @return null;
   }
   $lh: if($line-height != null, $line-height, $input-line-height);
-  $lh: strip-calc($lh);
+  $lh: str-util.strip-calc($lh);
 
   $height-font:    1em * $lh;
   $height-padding: 2 * if($padding-y != null, $padding-y, $input-padding-y);
 
-  $height-inner: add($height-font, $height-padding);
+  $height-inner: calc-util.add($height-font, $height-padding);
 
   @return $height-inner;
 }
@@ -29,15 +31,15 @@
   @if $padding-y == null and $line-height == null {
     @return null;
   }
-  $lh: if($line-height != null, $line-height, $input-line-height);
-  $lh: strip-calc($lh);
+  $lh: if($line-height != null, $line-height, settings.$input-line-height);
+  $lh: str-util.strip-calc($lh);
 
   $height-font:    1em * $lh;
-  $height-padding: 2 * if($padding-y != null, $padding-y, $input-padding-y);
-  $height-border:  $input-border-width * 2;
+  $height-padding: 2 * if($padding-y != null, $padding-y, settings.$input-padding-y);
+  $height-border:  settings.$input-border-width * 2;
 
   $height-inner: #{$height-font} string.unquote("+") #{$height-padding};
-  $height-outer: add($height-inner, $height-border);
+  $height-outer: calc-util.add($height-inner, $height-border);
 
   @return $height-outer;
 }
@@ -76,33 +78,33 @@
   $state,
   $color,
   $icon,
-  $tooltip-color: color-auto-contrast($color),
-  $tooltip-bg: rgba($color, $tooltip-opacity),
-  $focus-box-shadow: $input-focus-box-shadow-size rgba($color, $input-focus-box-shadow-alpha)
+  $tip-color: color-util.color-auto-contrast($color),
+  $tip-bg: rgba($color, settings.$tooltip-opacity),
+  $focus-box-shadow: settings.$input-focus-box-shadow-size rgba($color, settings.$input-focus-box-shadow-alpha)
 ) {
-  @if $enable-form-validation-feedback {
+  @if settings-options.$enable-form-validation-feedback {
     .#{$state}-feedback {
       display: none;
       width: 100%;
-      margin-top: $form-feedback-margin-top;
-      @include font-size($form-feedback-font-size);
+      margin-top: settings.$form-feedback-margin-top;
+      @include rfs.font-size(settings.$form-feedback-font-size);
       color: $color;
     }
   }
 
-  @if $enable-form-validation-tooltip {
+  @if settings-options.$enable-form-validation-tooltip {
     .#{$state}-tooltip {
       position: absolute;
       top: 100%;
       z-index: 5;
       display: none;
       max-width: 100%; // Contain to parent when possible
-      padding: $tooltip-padding-y $tooltip-padding-x;
+      padding: settings.$tooltip-padding-y settings.$tooltip-padding-x;
       margin-top: .125rem;
-      @include font-size($tooltip-font-size);
-      color: $tooltip-color;
-      background-color: $tooltip-bg;
-      @include border-radius($tooltip-border-radius);
+      @include rfs.font-size(settings.$tooltip-font-size);
+      color: $tip-color;
+      background-color: $tip-bg;
+      @include border.border-radius(settings.$tooltip-border-radius);
     }
   }
 
@@ -111,41 +113,41 @@
   }
 
   @include form-validation-state-selector($state) {
-    @if $enable-form-validation-feedback {
+    @if settings-options.$enable-form-validation-feedback {
       ~ .#{$state}-feedback {
         @extend %validation-feedback-tooltip-show-#{$state};
       }
     }
 
-    @if $enable-form-validation-tooltip {
+    @if settings-options.$enable-form-validation-tooltip {
       ~ .#{$state}-tooltip {
         @extend %validation-feedback-tooltip-show-#{$state};
       }
     }
   }
 
-  @if $enable-form-control {
+  @if settings-options.$enable-form-control {
     .form-control {
       @include form-validation-state-selector($state) {
         border-color: $color;
 
         &:focus {
           border-color: $color;
-          @if $enable-shadows {
-            @include box-shadow($input-box-shadow, $focus-box-shadow);
+          @if settings.$enable-shadows {
+            @include box-shadow.box-shadow(settings.$input-box-shadow, $focus-box-shadow);
           } @else {
             box-shadow: $focus-box-shadow;
           }
         }
       }
 
-      @if $enable-form-validation-icon {
+      @if settings-options.$enable-form-validation-icon {
         @include form-validation-state-selector-icon($state) {
           //background: $icon no-repeat right $form-feedback-icon-offset center / $form-feedback-icon-width $form-feedback-icon-height;
           background-image: $icon;
           background-repeat: no-repeat;
-          background-position: right $form-feedback-icon-offset center;
-          background-size: $form-feedback-icon-width $form-feedback-icon-height;
+          background-position: right settings.$form-feedback-icon-offset center;
+          background-size: settings.$form-feedback-icon-width settings.$form-feedback-icon-height;
         }
       }
     }
@@ -164,10 +166,10 @@
     }
   }
 
-  @if $enable-form-control and $enable-form-validation-icon {
+  @if settings-options.$enable-form-control and settings-options.$enable-form-validation-icon {
     .form-control:not(textarea):not(select) {
       @include form-validation-state-selector-icon($state) {
-        padding-right: add($input-padding-x, add($form-feedback-icon-width, $form-feedback-icon-offset, false));
+        padding-right: calc-util.add(settings.$input-padding-x, calc-util.add(settings.$form-feedback-icon-width, settings.$form-feedback-icon-offset, false));
       }
     }
 
@@ -175,11 +177,11 @@
     // stylelint-disable-next-line selector-no-qualifying-type
     select.form-control:not([size]):not([size="1"]):not([multiple]) {
       @include form-validation-state-selector-icon($state) {
-        padding-right: add($input-padding-x, add($form-feedback-icon-width, add($form-feedback-icon-offset, add($form-select-indicator-width, $form-select-indicator-offset, false), false), false));
-        background-image: $form-select-indicator-image, $icon;
+        padding-right: calc-util.add(settings.$input-padding-x, calc-util.add(settings.$form-feedback-icon-width, calc-util.add(settings.$form-feedback-icon-offset, calc-util.add(settings.$form-select-indicator-width, settings.$form-select-indicator-offset, false), false), false));
+        background-image: settings.$form-select-indicator-image, $icon;
         background-repeat: no-repeat, no-repeat;
-        background-position: $form-select-indicator-position, $form-feedback-select-icon-position;
-        background-size: $form-select-indicator-width $form-select-indicator-height, $form-feedback-icon-width $form-feedback-icon-height;
+        background-position: settings.$form-select-indicator-position, settings.$form-feedback-select-icon-position;
+        background-size: settings.$form-select-indicator-width settings.$form-select-indicator-height, settings.$form-feedback-icon-width settings.$form-feedback-icon-height;
       }
     }
 
@@ -190,14 +192,14 @@
     select.form-control[multiple],
     textarea.form-control {
       @include form-validation-state-selector-icon($state) {
-        padding-left: add($input-padding-x, add($form-feedback-icon-width, $form-feedback-icon-offset, false));
-        background-position: left $form-feedback-icon-offset center;
+        padding-left: calc-util.add(settings.$input-padding-x, calc-util.add(settings.$form-feedback-icon-width, settings.$form-feedback-icon-offset, false));
+        background-position: left settings.$form-feedback-icon-offset center;
       }
     }
     // stylelint-enable selector-no-qualifying-type
   }
 
-  @if $enable-form-check {
+  @if settings-options.$enable-form-check {
     @include form-validation-state-selector($state) {
       ~ .form-check-label {
         color: $color;
@@ -205,7 +207,7 @@
     }
   }
 
-  @if $enable-form-check and ($enable-form-check-checkradio or $enable-form-check-switch) {
+  @if settings-options.$enable-form-check and (settings-options.$enable-form-check-checkradio or settings-options.$enable-form-check-switch) {
     .form-check-input {
       @include form-validation-state-selector($state) {
         ~ .form-check-label {
@@ -226,8 +228,8 @@
         &:focus {
           ~ .form-check-label {
             &::before {
-              @if $enable-shadows {
-                @include box-shadow($input-box-shadow, $focus-box-shadow);
+              @if settings.$enable-shadows {
+                @include box-shadow.box-shadow(settings.$input-box-shadow, $focus-box-shadow);
               } @else {
                 box-shadow: $focus-box-shadow;
               }
@@ -238,12 +240,12 @@
     }
   }
 
-  @if $enable-form-check and $enable-form-check-switch {
+  @if settings-options.$enable-form-check and settings-options.$enable-form-check-switch {
     .form-switch .form-check-input {
       @include form-validation-state-selector($state) {
         ~ .form-check-label {
           &::before {
-            background-color: color-auto-contrast($color);
+            background-color: color-util.color-auto-contrast($color);
             border-color: $color;
           }
           &::after {
@@ -255,7 +257,7 @@
         &:checked {
           ~ .form-check-label {
             &::before {
-              background-color: color-auto-contrast($color);
+              background-color: color-util.color-auto-contrast($color);
               border-color: $color;
             }
             &::after {
@@ -268,14 +270,14 @@
         &:focus {
           ~ .form-check-label {
             &::before {
-              @if $enable-shadows {
-                @include box-shadow($form-switch-track-box-shadow, $focus-box-shadow);
+              @if settings.$enable-shadows {
+                @include box-shadow.box-shadow(settings.$form-switch-track-box-shadow, $focus-box-shadow);
               } @else {
                 box-shadow: $focus-box-shadow;
               }
             }
             &::after {
-              box-shadow: $form-switch-thumb-focus-box-shadow;
+              box-shadow: settings.$form-switch-thumb-focus-box-shadow;
             }
           }
         }
@@ -284,7 +286,7 @@
   }
 
   // Form file
-  @if $enable-form-file {
+  @if settings-options.$enable-form-file {
     .form-file-input {
       @include form-validation-state-selector($state) {
         ~ .form-file-label {
@@ -294,8 +296,8 @@
         &:focus {
           ~ .form-file-label {
             border-color: $color;
-            @if $enable-shadows {
-              @include box-shadow($input-box-shadow, $focus-box-shadow);
+            @if settings.$enable-shadows {
+              @include box-shadow.box-shadow(settings.$input-box-shadow, $focus-box-shadow);
             } @else {
               box-shadow: $focus-box-shadow;
             }
@@ -305,8 +307,8 @@
         &:focus-within {
           ~ .form-file-label {
             border-color: $color;
-            @if $enable-shadows {
-              @include box-shadow($input-box-shadow, $focus-box-shadow);
+            @if settings.$enable-shadows {
+              @include box-shadow.box-shadow(settings.$input-box-shadow, $focus-box-shadow);
             } @else {
               box-shadow: $focus-box-shadow;
             }
@@ -316,31 +318,31 @@
     }
   }
 
-  @if $enable-sizing {
-    @each $size, $dims in $input-sizes {
+  @if settings.$enable-sizing {
+    @each $size, $dims in settings.$input-sizes {
       $sz-padding-x:     map.get($dims, "padding-x");
 
       @if $sz-padding-x != null {
-        @if $enable-form-validation-icon {
-          @if $enable-form-control {
+        @if settings-options.$enable-form-validation-icon {
+          @if settings-options.$enable-form-control {
             .form-control-#{$size}:not(textarea),
             .input-group-#{$size} > .form-control:not(textarea) {
               @include form-validation-state-selector-icon($state) {
-                padding-right: add($sz-padding-x, add($form-feedback-icon-width, $form-feedback-icon-offset, false));
+                padding-right: calc-util.add($sz-padding-x, calc-util.add(settings.$form-feedback-icon-width, settings.$form-feedback-icon-offset, false));
               }
             }
 
             textarea.form-control-#{$size},
             .input-group-#{$size} > textarea.form-control {
               @include form-validation-state-selector-icon($state) {
-                padding-left: add($sz-padding-x, add($form-feedback-icon-width, $form-feedback-icon-offset, false));
+                padding-left: calc-util.add($sz-padding-x, calc-util.add(settings.$form-feedback-icon-width, settings.$form-feedback-icon-offset, false));
               }
             }
 
             select.form-control-#{$size},
             .input-group-#{$size} > select.form-control {
               @include form-validation-state-selector-icon($state) {
-                padding-right: add($sz-padding-x, add($form-feedback-icon-width, add($form-feedback-icon-offset, add($form-select-indicator-width, $form-select-indicator-offset, false), false), false));
+                padding-right: calc-util.add($sz-padding-x, calc-util.add(settings.$form-feedback-icon-width, calc-util.add(settings.$form-feedback-icon-offset, calc-util.add(settings.$form-select-indicator-width, settings.$form-select-indicator-offset, false), false), false));
 
                 &[size]:not([size="1"]),
                 &[multiple] {
@@ -369,15 +371,15 @@
 // contrast against a dark gray background.
 @mixin form-control-focus() {
   &:focus {
-    color: $input-focus-color;
-    background-color: $input-focus-bg;
-    border-color: $input-focus-border-color;
+    color: settings.$input-focus-color;
+    background-color: settings.$input-focus-bg;
+    border-color: settings.$input-focus-border-color;
     outline: 0;
-    @if $enable-shadows {
-      @include box-shadow($input-box-shadow, $input-focus-box-shadow);
+    @if settings.$enable-shadows {
+      @include box-shadow.box-shadow(settings.$input-box-shadow, $input-focus-box-shadow);
     } @else {
       // Avoid using mixin so we can pass custom focus shadow properly
-      box-shadow: $input-focus-box-shadow;
+      box-shadow: settings.$input-focus-box-shadow;
     }
   }
 }
@@ -386,27 +388,27 @@
 @mixin form-range-track() {
   box-sizing: border-box;
   width: 100%;
-  height: $form-range-track-height;
-  margin: 0 $form-range-thumb-focus-box-shadow-width;
+  height: settings.$form-range-track-height;
+  margin: 0 settings.$form-range-thumb-focus-box-shadow-width;
   color: transparent;
-  cursor: $form-range-track-cursor;
-  border: $form-range-track-border;
-  @include border-radius($form-range-track-border-radius);
-  @include box-shadow($form-range-track-box-shadow);
+  cursor: settings.$form-range-track-cursor;
+  border: settings.$form-range-track-border;
+  @include border.border-radius(settings.$form-range-track-border-radius);
+  @include box-shadow.box-shadow(settings.$form-range-track-box-shadow);
 }
 
 @mixin form-range-thumb() {
   box-sizing: border-box;
-  width: $form-range-thumb-width;
-  height: $form-range-thumb-height;
+  width: settings.$form-range-thumb-width;
+  height: settings.$form-range-thumb-height;
   appearance: none;
-  background-color: $form-range-thumb-bg;
-  border: $form-range-thumb-border;
-  @include border-radius($form-range-thumb-border-radius);
-  @include box-shadow($form-range-thumb-box-shadow);
-  @include transition($input-transition);
+  background-color: settings.$form-range-thumb-bg;
+  border: settings.$form-range-thumb-border;
+  @include border.border-radius(settings.$form-range-thumb-border-radius);
+  @include box-shadow.box-shadow(settings.$form-range-thumb-box-shadow);
+  @include transition.transition(settings.$input-transition);
 
   &:active {
-    background-color: $form-range-thumb-active-bg;
+    background-color: settings.$form-range-thumb-active-bg;
   }
 }
