--- a/scss/mixins/_transition.scss
+++ b/scss/mixins/_transition.scss
@@ -1,11 +1,10 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
+@use "../settings";
 
 // stylelint-disable property-disallowed-list
 @mixin transition($transition...) {
-  @if $enable-transitions {
+  @if settings.$enable-transitions {
     @if length($transition) == 0 {
-      $transition: $transition-base;
+      $transition: settings.$transition-base;
     }
 
 
@@ -21,7 +20,7 @@
       transition: $transition;
     }
 
-    @if $enable-transitions-reduced and nth($transition, 1) != null and nth($transition, 1) != none {
+    @if settings.$enable-transitions-reduced and nth($transition, 1) != null and nth($transition, 1) != none {
       @media (prefers-reduced-motion: reduce) {
         transition: none;
       }
