--- a/scss/utilities/_float.scss
+++ b/scss/utilities/_float.scss
@@ -1,20 +1,21 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../mixins" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../mixins/breakpoints";
+@use "../mixins/float";
 
-@if $enable-utility-float {
-  @each $breakpoint in $utility-float-breakpoints {
-    $bprule: breakpoint-designator($breakpoint);
+@if settings-options.$enable-utility-float {
+  @each $breakpoint in settings.$utility-float-breakpoints {
+    $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-    @include media-breakpoint-up($breakpoint) {
+    @include breakpoints.media-breakpoint-up($breakpoint) {
       .float#{$bprule}-start {
-        @include float-start();
+        @include float.float-start();
       }
       .float#{$bprule}-end {
-        @include float-end();
+        @include float.float-end();
       }
       .float#{$bprule}-none {
-        @include float-none();
+        @include float.float-none();
       }
     }
   }
