--- a/scss/utilities/_object-fit.scss
+++ b/scss/utilities/_object-fit.scss
@@ -1,17 +1,17 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../mixins" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../mixins/breakpoints";
 
 // stylelint-disable declaration-no-important
 
 // Object-fit utilties
-@if $enable-utility-object-fit {
-  @if $utility-object-fit != null {
-    @each $breakpoint in $utility-object-fit-breakpoints {
-      $bprule: breakpoint-designator($breakpoint);
+@if settings-options.$enable-utility-object-fit {
+  @if settings.$utility-object-fit != null {
+    @each $breakpoint in settings.$utility-object-fit-breakpoints {
+      $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-      @include media-breakpoint-up($breakpoint) {
-        @each $name, $value in $utility-object-fit {
+      @include breakpoints.media-breakpoint-up($breakpoint) {
+        @each $name, $value in settings.$utility-object-fit {
           .object-fit#{$bprule}-#{$name} {
             object-fit: $value !important;
           }
