--- a/scss/utilities/_opacity.scss
+++ b/scss/utilities/_opacity.scss
@@ -1,10 +1,10 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
+@use "../settings";
+@use "../settings-options";
 
 // stylelint-disable declaration-no-important
 
-@if $enable-utility-opacity {
-  @each $name, $value in $utility-opacity {
+@if settings-options.$enable-utility-opacity {
+  @each $name, $value in settings.$utility-opacity {
     .opacity-#{$name} {
       opacity: $value !important;
     }
