--- a/scss/utilities/_valign.scss
+++ b/scss/utilities/_valign.scss
@@ -1,14 +1,14 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../mixins" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../mixins/breakpoints";
 
 // stylelint-disable declaration-no-important
 
-@if $enable-utility-valign {
-  @each $breakpoint in $utility-valign-breakpoints {
-    $bprule: breakpoint-designator($breakpoint);
+@if settings-options.$enable-utility-valign {
+  @each $breakpoint in settings.$utility-valign-breakpoints {
+    $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-    @include media-breakpoint-up($breakpoint) {
+    @include breakpoints.media-breakpoint-up($breakpoint) {
       .valign#{$bprule}-baseline { vertical-align: baseline !important; }
       .valign#{$bprule}-top { vertical-align: top !important; }
       .valign#{$bprule}-middle { vertical-align: middle !important; }
