--- a/scss/utilities/_zindex.scss
+++ b/scss/utilities/_zindex.scss
@@ -1,12 +1,12 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
+@use "../settings";
+@use "../settings-options";
 
 // stylelint-disable declaration-no-important
 
 // z-index utilties
-@if $enable-utility-zindex {
-  @if $utility-zindex != null {
-    @each $name, $value in $utility-zindex{
+@if settings-options.$enable-utility-zindex {
+  @if settings.$utility-zindex != null {
+    @each $name, $value in settings.$utility-zindex{
       .z-#{$name} {
         z-index: $value !important;
       }
